unpackaged/main/default/objects/Calendar_Settings__c/Calendar_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the Calendar to set which fields should be available for filter, sort, group, color, and count</description>
    <label>Calendar Settings</label>
</CustomObject>