unpackaged/main/default/objects/Calendar_Settings__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>SOQL filter criteria for selecting metadata API values or record values</description>
    <inlineHelpText>SOQL filter criteria for selecting metadata API values or record values</inlineHelpText>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>