unpackaged/main/default/objects/Calendar_Settings__c/fields/FilterBy__c.field-meta.xml
<CustomField>
    <fullName>FilterBy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filter by this field</description>
    <inlineHelpText>Filter by this field</inlineHelpText>
    <label>FilterBy</label>
    <type>Checkbox</type>
</CustomField>