unpackaged/main/default/objects/Calendar_Settings__c/fields/GroupByDefault__c.field-meta.xml
<CustomField>
    <fullName>GroupByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group By Default</label>
    <type>Checkbox</type>
</CustomField>