unpackaged/main/default/objects/Calendar_Settings__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <description>Mapped value from the Object's Field to the corresponding JSON existing standard field in the dhtmlxGantt code base</description>
    <inlineHelpText>Mapped value from the Object's Field to the corresponding JSON existing standard field in the dhtmlxGantt code base</inlineHelpText>
    <label>JSON</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>