unpackaged/main/default/objects/Calendar_Settings__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label for the setting the user sees while on the Program Calendar; this may be different than the field label on the field or record</description>
    <inlineHelpText>Label for the setting the user sees while on the Program Calendar; this may be different than the field label on the field or record</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>