unpackaged/main/default/objects/Calendar_Settings__c/fields/SearchBy__c.field-meta.xml
<CustomField>
    <fullName>SearchBy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Free text search by this field</description>
    <inlineHelpText>Free text search by this field</inlineHelpText>
    <label>SearchBy</label>
    <type>Checkbox</type>
</CustomField>