unpackaged/main/default/objects/Calendar_Settings__c/fields/SearchOrder__c.field-meta.xml
<CustomField>
    <fullName>SearchOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order of the Searches - set to 0 if there is no Search</description>
    <inlineHelpText>Order of the Searches - set to 0 if there is no Search</inlineHelpText>
    <label>SearchOrder</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>