unpackaged/main/default/objects/Calendar_Settings__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order of the Sorts - set to 0 if there is no Sort</description>
    <inlineHelpText>Order of the Sorts - set to 0 if there is no Sort</inlineHelpText>
    <label>SortOrder</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>