unpackaged/main/default/objects/Calendar_Settings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Field Data Definition Type if for example a Picklist (e.g. Channel) or an Record (e.g. Tags record for Brand or Territory)</description>
    <inlineHelpText>Field Data Definition Type if for example a Picklist (e.g. Channel) or an Record (e.g. Tags record for Brand or Territory)</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>